# 3d-math

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
include/: MathObject.h  Matrix3.h  Vector3.h
src/: CMakeLists.txt  Matrix3.cpp  Vector3.cpp
test/: CMakeLists.txt
test/src/: Vector3_unittest.cpp  main.cpp
tests/: CMakeLists.txt  Matrix3_unittest.cpp  Vector3_unittest.cpp  main.cpp
